新增从简书查询到的mq实例...

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -2,3 +2,8 @@ rabbitMQ.addresses=127.0.0.1
 rabbitMQ.username=guest
 rabbitMQ.password=guest
 rabbitMQ.vhost=hope
+
+rabbit_username=guest
+rabbit_password=guest
+rabbit_host=127.0.0.1
+rabbit_port=5672
